objects/TROUBLESHOOTING_UTILITIES__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>ATTACHMENT2__c</fullName>
        <label>Attachment2</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>ATTACHMENT3__c</fullName>
        <label>Attachment3</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>ATTACHMENT4__c</fullName>
        <label>Attachment4</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <label>CreatedBy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DETAIL__c</fullName>
        <label>Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Related_Articles__c</fullName>
        <label>Related Articles</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Troubleshooting Utilities</label>
    <pluralLabel>Troubleshooting Utilities</pluralLabel>
</CustomObject>